# CoDoc_AI

./: .gitignore  .replit  README.md  app.py  main.py  pyproject.toml  replit.md  test_mermaid.py
.github/workflows/: codeql.yml
app/: __init__.py
app/models/: request_models.py
app/services/: ai_documentation_service.py  codebase_analyzer.py
app/utils/: logger.py
